[project]
name = "prof-portfolio"
version = "0.1.0"
description = "poetry env for my professional porftolio"
authors = [
    {name = "Andrew Paladino",email = "andyjpaladino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=1.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
